# open_im_sdk

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/open_im_sdk_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/flutter/: generated_plugins.cmake
ios/: open_im_sdk.podspec
ios/Classes/: open_im_sdk.c
ios/openimsdk.framework/: Info.plist
lib/: im_manager.dart  open_im_sdk.dart  open_im_sdk_bindings_generated.dart
lib/enum/: enum.dart
lib/interface/base/: base_connection.dart  base_conversation.dart  base_friendship.dart  base_group.dart  base_listener.dart  base_message.dart  base_user.dart
lib/interface/native/: connection.dart  conversation.dart  friendship.dart  group.dart  message.dart  user.dart
lib/interface/web/: connection.dart  conversation.dart  friendship.dart  group.dart  message.dart  user.dart
lib/listener/: listener.dart  manager.dart
lib/model/: conversation_info.dart  group_info.dart  init_config.dart  message.dart  notification_info.dart  search_info.dart  user_info.dart
lib/utils/: define.dart  sdk_bindings.dart  utils.dart
linux/: CMakeLists.txt
macos/: open_im_sdk.podspec
macos/Classes/: open_im_sdk.c
src/: CMakeLists.txt  open_im_sdk.c  open_im_sdk.h  openimsdk.h
windows/: CMakeLists.txt
